发布时间：2018/09/11 16:13
修改记录：
	一、lib脚本修改
	(1)console.lua:	修复去掉换车换行时候实际上没去掉的bug
	(2)lbsloc.lua:  修复底层urc上报ceng信息改变后基站定位有时候失败的问题	
发布时间：2018/08/28 16:15
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.1.1
	(1)sms.lua：修正“开机后发送的第一条短信发送回调返回发送失败”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：必现
		【问题出现原因】：代码逻辑出错
		【问题解决方式】：修正代码逻辑
	(2)sms.lua：修正“接收短信空间满导致后续短信接收不到”的问题
		【问题重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现概率】：极低
		【问题出现原因】：收到短信后，会去读取短信，然后删除短信，在删除短信前，如果发生了异常重启，就会导致短信不能删除而占用存储空间
		【问题解决方式】：每次开机，清空所有已读短信
	(3)aLiYun.lua：优化断线重连机制
		【新功能重要性】：一般
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【新功能说明】：断线后，如果重连一次失败，关闭IP环境，重新激活。如果IP激活超时失败，通过进入退出飞行模式尝试恢复
	(4)misc.lua：新增“时钟整分上报通知”的功能
		【新功能重要性】：一般
		【新功能影响模块】：Air202、Air800、Air801、Air201、Air208
		【新功能说明】：publish消息"TIME_CLK_IND"
	(5)uiWin.lua：新增“按键消息处理”、“窗口刷新”、“移除所有窗口”的功能
	(6)gps.lua：扩展getLocation接口功能
		【新功能重要性】：一般
		【新功能影响模块】：Air202、Air800、Air801、Air201、Air208
		【新功能说明】：可获取度分秒格式的经纬度
	(7)mqtt.lua：新增“取消订阅unsubscribe”、“收到的publish消息retain标志解析”的功能
	(8)sim.lua：新增“关闭sim卡的STK”功能
		【新功能重要性】：一般
		【新功能影响模块】：Air202、Air800、Air801、Air201、Air208
		【新功能说明】：有的sim卡STK功能开机会不断的发送短信，影响数据业务的稳定工作





发布时间：2018/08/23 17:25
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.1.0
	(1)【增加功能】 pins.setup(pin,val,pull)接口新增pull参数，表示设置输入和中断模式的时候可以选择IO口状态:pio.PULLUP：上拉模式 。pio.PULLDOWN：下拉模式。pio.NOPULL：高阻态。默认参考模块的硬件设计说明书




发布时间：2018/08/19 22:55
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.0.9
	(1)ril.lua: 修正ril的软狗概率重启事件
		【问题重要性】：重要
		【问题影响模块】：Air202、Air800、Air801、Air201、Air208
		【问题出现原因】：增加SSL后，有概率会同时启动两个或更多个同名回调函数的定时器，而停止定时器的时候只停止了1个，另外一个原因是底层send后返回send ok（failed)时间延长超过1分钟默认值了。
		【问题解决方式】：修改软狗默认时间为2分钟，修改停止函数为sys.timerStopAll(timeout)

    二、demo脚本修改
	(1) UI demo 增加st7789的驱动

		


发布时间：2018/08/08 20:29
修改记录：
    一、lib脚本修改
	lib脚本版本号：2.0.8
	(1)agps.lua：修正“概率性重复下载两次星历”的问题
		【问题重要性】：一般
		【问题影响模块】：Air800
		【问题出现概率】：启动星历下载流程前，如果GPS没有处于开启状态，才会出现此问题
		【问题出现原因】：GPS开启后，有一个误操作，会导致再次执行星历下载动作
		【问题解决方式】：修复误操作