@@ -3,6 +3,7 @@
 	一、lib脚本修改
 	(1)console.lua:	修复去掉换车换行时候实际上没去掉的bug
 	(2)lbsloc.lua:  修复底层urc上报ceng信息改变后基站定位有时候失败的问题	
+	(3)utils.lua: 	修复split()不支持空字符串返回的bug
 发布时间：2018/08/28 16:15
 修改记录：
     一、lib脚本修改
